2003-11-27  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/effect.c, timidity/readmidi.c:
	  Fix around GS Insertion Effect.

2003-11-24  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c:
	  Bug exposed by dynamic allocation of voice[] was fixed.

2003-11-22  Saito <saito2@digitalme.com>

	* interface/w32g_utl.c:
	  Fix typos.

2003-11-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g_pref.c, interface/w32g_res.{h,rc},
	  interface/w32g_subwin3.c, interface/w32g_tracer.bmp:
	  Support for user-defined temperament (W32GUI version)

2003-11-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, timidity/playmidi.[ch], timidity/readmidi.c:
	  Support for user-defined temperament entry with Universal SysEx.
	  - User-defined Temperament Entry (F0 7E id 08 0C tt <temper name>
	            ll [fh fl bh bl aa bb cc dd ee ff] ... F7)

2003-11-17  Takashi Iwai <tiwai@suse.de>
	
	* interface/alsaseq_c.c, timidity/alsa_a.c:  Fix the compilation
	  with the latest ALSA 1.0.0.

2003-11-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  interface/ncurs_c.c, interface/w32g_subwin3.c,
	  timidity/playmidi.[ch], timidity/tables.[ch]:
	  Support for temperament with passing major/minor key

2003-11-13  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Rewrite option handling a little

2003-11-13  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.[ch], timidity/tables.[ch], timidity/timidity.c:
	  new option -V power, --volume-curve=power

2003-11-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/tables.c:
	  Adjust mean-tone tuning (Salinas) in a stricter theory

2003-11-10  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/resample.c (set_resampler_parm): -N for Newton
	  interpolation should be 1 to 57 odd, not 1 to 56 even

2003-11-08  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/effect.c, timidity/playmidi.c, timidity/reverb.c,
	  timidity/timidity.c: